# intar-dev

.github/workflows/: kino-ci.yml  kino-release.yml  stardrive-ci.yml  stardrive-release.yml  stargate-ci.yml  stargate-release.yml
Formula/: stardrive.rb
projects/kino/: AGENTS.md  README.md  justfile
projects/kino/crates/kino/: Cargo.toml
projects/kino/crates/kino/src/: config.rs  main.rs  probe.rs  recording.rs  state.rs
projects/kino/deploy/: kino.hcl
projects/kino/docker/smoke/: validate_casts.py
projects/kino/proto/kino/v1/: probes.proto
projects/stardrive/: .goreleaser.yml  README.md  go.mod  go.sum
projects/stardrive/gitops/core/cert-manager/: helmrelease.yaml
projects/stardrive/gitops/core/external-secrets/: helmrelease.yaml
projects/stardrive/internal/config/: config.go  config_test.go
projects/stardrive/internal/infisical/: client.go  client_test.go
projects/stardrive/internal/talos/: boot_assets_test.go  client.go  client_test.go  generate.go  generate_test.go  versions_test.go
projects/stardrive/internal/workflow/: bootstrap.go  bootstrap_secrets_test.go  bootstrap_test.go  cluster_runtime.go  cluster_runtime_test.go  destroy.go  gitops.go  gitops_test.go  runtime.go  runtime_test.go  scale_test.go  secrets.go  upgrade.go
projects/stardrive/scripts/: update-homebrew-formula.sh
projects/stargate/: justfile
projects/stargate/crates/stargate-app/: Cargo.toml
