[package]
name = "kino"
version = "0.1.22"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.102"
axum = { version = "=0.8.9", default-features = false, features = ["http1", "tokio"] }
base64 = "=0.22.1"
clap = { version = "=4.6.1", features = ["derive"] }
hcl-rs = "=0.19.7"
jsonpath-rust = "=1.0.4"
k8s-openapi = { version = "=0.27.1", features = ["v1_35"] }
kube = { version = "=3.1.0", default-features = false, features = ["client", "config", "rustls-tls"] }
prost = "=0.14.3"
regex = "=1.12.3"
rustls = { version = "=0.23.40", default-features = false, features = ["ring"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }

[build-dependencies]
prost-build = "=0.14.3"
protoc-bin-vendored = "=3.2.0"

[dev-dependencies]
tempfile = "=3.27.0"
tower = { version = "=0.5.3", features = ["util"] }

[target.'cfg(target_os = "linux")'.dependencies]
crossterm = "=0.29.0"
pty-process = "=0.5.3"
rustix = { version = "=1.1.4", features = ["event", "pipe"] }
signal-hook = "=0.4.4"
tokio-vsock = { version = "=0.7.2", features = ["axum08"] }
